fixed about page

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,18 @@
 {
     "cSpell.words": [
         "Gobind",
+        "Gurbani",
+        "Gurmat",
+        "Gurmukhi",
+        "Ji's",
+        "Kirtan",
         "Sarvar",
+        "Sewa",
+        "Sikhi",
         "heroicons",
         "layer",
-        "semibold"
+        "semibold",
+        "tasi",
+        "zoltan"
     ]
 }
