working on resources page and create three resources pages

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,12 @@
 {
     "cSpell.words": [
+        "GSRes",
         "Gobind",
         "Gurbani",
         "Gurmat",
         "Gurmukhi",
         "Ji's",
+        "Khalsa",
         "Kirtan",
         "Sarvar",
         "Sewa",
